# ibus-table-others

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  ibus-table-others.spec  ibus-table-others.spec.in
autom4te.cache/: output.1  requests  traces.0  traces.1
emoji-src/: Makefile  Makefile.am  Makefile.in  Phrases.ini  convert.py  emoji-table.txt.data
emoticon-src/: Makefile.am  convert.py
icons/: Makefile  Makefile.am  Makefile.in
m4/: Makefile  Makefile.am  Makefile.in
tables/: Makefile  Makefile.am  Makefile.in  cns11643.txt  compose.txt  emoji-table.txt  emoticon-table.txt  hu-old-hungarian-rovas.txt  hu_Hung_HU_traditional.txt  ipa-x-sampa.txt  latex.txt  lean.txt  mathwriter-ibus.db  mathwriter-ibus.txt  mathwriter-ibus.txt~  mongol_bichig.txt  rusle.txt  rustrad.txt  telex.txt  thai.txt  translit-ua.txt  translit.txt  viqr.txt  vni.txt  yawerty.txt
