# vim:set ts=4
#
# ibus-table-others - Other tables for IBus-Table
#
# Copyright (c) 2009-2010 Caius 'kaio' Chance <k at kaio.me>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

icons_DATA = 

if IBUS_TABLE_BUILD_COMPOSE
icons_DATA += compose.svg
endif

if IBUS_TABLE_BUILD_IPAXSAMPA
icons_DATA += ipa-x-sampa.svg
endif

if IBUS_TABLE_BUILD_TRANSLIT
icons_DATA += translit.svg
endif

if IBUS_TABLE_BUILD_TRANSLITUA
icons_DATA += translit-ua.svg
endif

if IBUS_TABLE_BUILD_RUSTRAD
icons_DATA += rustrad.png
endif

if IBUS_TABLE_BUILD_RUSLE
icons_DATA += rusle.png
endif

if IBUS_TABLE_BUILD_YAWERTY
icons_DATA += yawerty.png
endif

if IBUS_TABLE_BUILD_THAI
icons_DATA += thai.png
endif

if IBUS_TABLE_BUILD_TELEX
icons_DATA += telex.png
endif

if IBUS_TABLE_BUILD_VIQR
icons_DATA += viqr.png
endif

if IBUS_TABLE_BUILD_VNI
icons_DATA += vni.png
endif

if IBUS_TABLE_BUILD_LATEX
icons_DATA += latex.svg
endif

if IBUS_TABLE_BUILD_CNS11643
icons_DATA += cns11643.png
endif

if IBUS_TABLE_BUILD_EMOTICON
icons_DATA += ibus-emoticon.svg
endif

if IBUS_TABLE_BUILD_MATHWRITER
icons_DATA += mathwriter.png
endif

if IBUS_TABLE_BUILD_ROVAS
icons_DATA += hu-old-hungarian-rovas.svg
endif

if IBUS_TABLE_BUILD_MONGOLBICHIG
icons_DATA += mongol_bichig.svg
endif

icons_DATA += $(NULL)

iconsdir = $(datadir)/ibus-table/icons

EXTRA_DIST = \
	compose.svg \
	ipa-x-sampa.svg \
	translit.svg \
	translit-ua.svg \
	rustrad.png \
	rusle.png \
	yawerty.png \
	thai.png \
	telex.png \
	viqr.png \
	vni.png \
	latex.svg \
	cns11643.png \
	ibus-emoticon.svg \
	mathwriter.png \
	hu-old-hungarian-rovas.svg \
	mongol_bichig.svg \
	$(NULL)
